Correct alignment of the arrow in program link for tablet

--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -60,6 +60,10 @@
     background-image: url("../../img/icon-right-arrow-long.svg");
     background-repeat: no-repeat;
     background-position: center;
+
+    @include md-size {
+      height: 20px;
+    }
   }
 }
 
